context: Fix ErrorProne ClassNewInstance
http://errorprone.info/bugpattern/ClassNewInstance